--- a/weather_predictor/forecast/templates/forecast/weather.html
+++ b/weather_predictor/forecast/templates/forecast/weather.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Prediction</title>
+    <title>FORETELL</title>
     <link rel="stylesheet" type="text/css" href="{% static 'forcast/style.css' %}">
 </head>
 <body>
@@ -40,7 +40,7 @@
         </div>
     {% endif %}
     <a href="{% url 'chatbot' %}">
-             <button class="btn"> get Recommendations</button>
+             <button class="btn"> Get Recommendations</button>
         </a>
 <script src="{% static 'script.js' %}"></script>
 </body>
