--- a/weather_predictor/forecast/templates/forecast/weather.html
+++ b/weather_predictor/forecast/templates/forecast/weather.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Weather Prediction</h1>
+    <h1>FORETELL</h1>
     <form method="POST">
         {% csrf_token %}
         <input type="text" name="city" placeholder="Enter City Name" required>
